@@ -6,7 +6,6 @@ module JIRA::RemoteAPI
   #
   # @param [String] project_key
   # @return [Array<JIRA::Component>]
-
   def components_for_project_with_key project_key
     array_jira_call JIRA::Component, 'getComponents', project_key
   end
