@@ -10,14 +10,11 @@ module JIRA::RemoteAPI
     array_jira_call JIRA::Filter, 'getFavouriteFilters'
   end
   alias_method :favorite_filters,      :favourite_filters
-  deprecate :favorite_filters
-  deprecate :favourite_filters
 
   # @param [String] id
   # @return [Fixnum]
   def issue_count_for_filter_with_id id
     jira_call( 'getIssueCountForFilter', id ).to_i
   end
-  deprecate :issue_count_for_filter_with_id
 
 end
