@@ -6,12 +6,10 @@ module JIRA::RemoteAPI
   def notification_schemes
     array_jira_call JIRA::NotificationScheme, 'getNotificationSchemes'
   end
-  deprecate :notification_schemes
 
   # @return [Array<JIRA::PermissionScheme>]
   def permission_schemes
     array_jira_call JIRA::PermissionScheme, 'getPermissionSchemes'
   end
-  deprecate :permission_schemes
 
 end
