@@ -9,12 +9,10 @@ module JIRA::RemoteAPI
   def server_info
     JIRA::ServerInfo.new_with_xml jira_call( 'getServerInfo' )
   end
-  deprecate :server_info
 
   # @return [JIRA::ServerConfiguration]
   def server_configuration
     JIRA::ServerConfiguration.new_with_xml jira_call( 'getConfiguration' )
   end
-  deprecate :server_configuration
 
 end
