@@ -4,6 +4,8 @@ Version 0.10.0
 	* Add RemoteAPI#components_for_project_with_key (thanks @rjharmon)
 
 	* Deprecate RemoteAPI#add_base64_encoded_attachments_to_issue_with_key (thanks @rjharmon)
+	* Remove deprecated methods from previous release
+
 Version 0.9.2
 
 	* Remove unneeded httpclient dependency
